# Nelta

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  vcpkg.json
resources/skins/: default_skin.json
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.h
src/cheats/: cheat_manager.cpp  cheat_manager.h
src/core/: emulator_wrapper.cpp  emulator_wrapper.h  game_loader.cpp  game_loader.h
src/input/: controller_manager.cpp  controller_manager.h  gamepad_detector.cpp  gamepad_detector.h  input_mapper.cpp  input_mapper.h
src/settings/: config_manager.cpp  config_manager.h  graphics_settings.cpp  graphics_settings.h
src/ui/: main_window.cpp  main_window.h
src/ui/styles/: skin_manager.cpp  skin_manager.h
src/ui/widgets/: control_mapper.cpp  control_mapper.h  game_viewport.cpp  game_viewport.h  settings_panel.cpp  settings_panel.h
